Added extra log messages and jackpot claim